<resources>
    <string name="app_name">CARE</string>
    <string name="app_name_long">Covid Appointment Rapid Entry</string>
    <string name="guest">Guest</string>
    <string name="business">Business</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="company_name">Company Name</string>

    <string name="sign_in_as_guest">Sign in as Guest</string>
    <string name="sign_in_as_business">Sign in as Business</string>


    <!-- Strings for UserModel -->
    <string name="wrong_email_or_password">Wrong email or passwords. Please try again!</string>
    <string name="email_invalid">Email is invalid.</string>
    <string name="password_invalid">Password needs to have 6-12 characters, only contains letters and numbers.</string>
    <string name="covid_survey">Take Covid Survey </string>
    <string name="upload_covid_results">Upload Covid Results</string>
    <string name="schedule_appt">Schedule Appointments</string>
    <string name="calendar">Calendar</string>
    <string name="explore_business">Explore Businesses</string>
    <string name="business_visited">Businesses Visited </string>
    <string name="title_activity_guest_home_page">GuestHomePage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="password_not_match">Password is incorrect</string>
    <string name="phone_invalid">Phone is invalid</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <!-- Strings for activity_survey -->
    <string name="survey_title">COVID-19 Survey</string>
    <string name="submit_button">Submit</string>

    <!-- Strings for confirmation code -->
    <string name="confirmation_code"></string>

    <string name="explore_businesses">Explore Businesses</string>
    <string name="account_home">Account Home</string>
    <string name="manage_business_officers">Manage Business Officers</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="add_officer">Add Officer</string>
    <string name="remove_officer">Remove Officer</string>
    <string name="businessname">Business Name</string>
    <string name="firstname_lastname">First Name Last Name</string>
    <string name="bus_appts">View Potential Appointments</string>
    <string name="manage_officers">Manage Officers</string>
    <string name="covid_survey_results">Covid Survey Results</string>
    <string name="date_result">Date - Result</string>
    <string name="businesses_visited">Businesses Visited</string>
    <string name="scheduled_appointments">Scheduled Appointments</string>
    <string name="scheduled_appointment_layout">Officer: Date, Time, Guest</string>

    <!-- Strings for activity_check_in -->
    <string name="check_in">Check In</string>
    <string name="search_by_email">Search by email</string>
    <string name="search_by_code">Search by confirmation code</string>
    <string name="appointment_detail">Appointment Detail</string>
    <string name="title_activity_check_in_guest">CheckInGuest</string>
    <!--    &lt;!&ndash; Strings used for fragments for navigation &ndash;&gt;-->
    <!--    <string name="first_fragment_label">First Fragment</string>-->
    <!--    <string name="second_fragment_label">Second Fragment</string>-->
    <!--    <string name="next">Next</string>-->
    <!--    <string name="previous">Previous</string>-->

    <!--    <string name="hello_first_fragment">Hello first fragment</string>-->
    <!--    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>-->

    <!-- Strings for open and close navigation drawer   -->
    <string name="open">Open</string>
    <string name="close">Close</string>

    <!-- GuestProfileFragment -->
    <string name="GuestProfile">Guest Profile</string>
    <string name="GuestName">Guest Name</string>
    <string name="GuestEmail">Guest Email</string>
    <string name="GuestPhoneNumber">Guest Phone Number</string>


</resources>