<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ManageBusinessOfficers"
    android:background="@color/background">

    <TextView
        android:id="@+id/tvManageOfficers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/manage_business_officers"
        android:textColor="@color/white"
        android:textSize="27sp"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvOfficersList"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_below="@+id/btnAccountHome"
        android:layout_marginTop="30dp" />

    <RelativeLayout
        android:id="@+id/layoutaddRemoveOfficer"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_below="@id/tvManageOfficers"
        android:layout_marginTop="30dp">

        <EditText
            android:id="@+id/etFirst"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:backgroundTint="@color/white"
            android:hint="@string/first_name"
            android:textColor="@color/white"
            android:inputType="textPersonName"
            android:textColorHint="@color/white"
            android:importantForAutofill="no"></EditText>

        <EditText
            android:id="@+id/etLast"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_alignParentEnd="true"
            android:backgroundTint="@color/white"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:importantForAutofill="no"></EditText>

        <Button
            android:id="@+id/btnAddOfficer"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/etFirst"
            android:layout_alignParentStart="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/button_color"
            android:text="@string/add_officer"
            android:textColor="@color/white"></Button>

        <Button
            android:id="@+id/btnRemoveOfficer"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/etLast"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="30dp"
            android:backgroundTint="@color/button_color"
            android:text="@string/remove_officer"
            android:textColor="@color/white"></Button>
    </RelativeLayout>

    <Button
        android:id="@+id/btnAccountHome"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutaddRemoveOfficer"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/button_color"
        android:layout_marginTop="30dp"
        android:text="@string/account_home"
        android:textColor="@color/white"></Button>

</RelativeLayout>