<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:clickable="true"
    android:clipToPadding="false"
    tools:context=".CheckInGuest">

    <TextView
        android:id="@+id/txtCheckIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="30dp"
        android:text="@string/check_in"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/layoutSearchCheckBoxes"
        android:orientation="vertical"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/txtCheckIn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <CheckBox
            android:id="@+id/checkBoxByCode"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:buttonTint="@color/white"
            android:checked="true"
            android:text="@string/search_by_code"
            android:textColor="@color/white"
            android:textSize="17sp"/>

        <CheckBox
            android:id="@+id/checkBoxByEmail"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:buttonTint="@color/white"
            android:checked="false"
            android:text="@string/search_by_email"
            android:textColor="@color/white"
            android:textSize="17sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/layoutInputSearch"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/layoutSearchCheckBoxes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/editTextSearchInput"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:hint="Confirmation Code"
            android:importantForAutofill="no"
            android:inputType="textCapCharacters"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <Button
            android:id="@+id/buttonSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/my_button"
            android:text="Search"
            android:textColor="@color/white"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/layoutAppointment"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/layoutInputSearch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="invisible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtViewAppointment"
            android:text="@string/appointment_detail"
            android:textColor="@color/white"
            android:textSize="25sp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/layoutAppointmentInfo"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:layout_gravity="left">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtGuestName"
                android:text="Name: "
                android:textColor="@color/white"
                android:textSize="17sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtGuestEmail"
                android:text="Email: "
                android:textColor="@color/white"
                android:textSize="17sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtGuestConfirmationCode"
                android:text="Confirmation Code: "
                android:textColor="@color/white"
                android:textSize="17sp"/>

        </LinearLayout>

        <Button
            android:id="@+id/buttonCheckIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/my_button"
            android:text="@string/check_in"
            android:textColor="@color/white"/>

    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>
